diesel_compile_tests/tests/fail/subselect_cannot_reference_random_tables.stderr
error[E0271]: type mismatch resolving `<diesel::query_source::joins::Join<posts::table, users::table, Inner> as AppearsInFromClause<comments::table>>::Count == diesel::query_source::Once`
  --> $DIR/subselect_cannot_reference_random_tables.rs:32:10
   |
32 |         .load::<(i32,)>(&mut conn);
   |          ^^^^ expected struct `diesel::query_source::Never`, found struct `diesel::query_source::Once`
   |
   = note: required because of the requirements on the impl of `AppearsOnTable<diesel::query_source::joins::Join<posts::table, users::table, Inner>>` for `comments::columns::id`
   = note: 2 redundant requirements hidden
   = note: required because of the requirements on the impl of `AppearsOnTable<diesel::query_source::joins::Join<posts::table, users::table, Inner>>` for `Grouped<diesel::expression::operators::Eq<comments::columns::id, diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>>>`
   = note: required because of the requirements on the impl of `diesel::query_builder::where_clause::ValidWhereClause<diesel::query_source::joins::Join<posts::table, users::table, Inner>>` for `diesel::query_builder::where_clause::WhereClause<Grouped<diesel::expression::operators::Eq<comments::columns::id, diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>>>>`
   = note: required because of the requirements on the impl of `ValidSubselect<users::table>` for `SelectStatement<posts::table, diesel::query_builder::select_clause::SelectClause<posts::columns::id>, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::WhereClause<Grouped<diesel::expression::operators::Eq<comments::columns::id, diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>>>>>`
   = note: 4 redundant requirements hidden
   = note: required because of the requirements on the impl of `diesel::query_builder::where_clause::ValidWhereClause<users::table>` for `diesel::query_builder::where_clause::WhereClause<Grouped<In<users::columns::id, Subselect<SelectStatement<posts::table, diesel::query_builder::select_clause::SelectClause<posts::columns::id>, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::WhereClause<Grouped<diesel::expression::operators::Eq<comments::columns::id, diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>>>>>, diesel::sql_types::Integer>>>>`
   = note: required because of the requirements on the impl of `Query` for `SelectStatement<users::table, diesel::query_builder::select_clause::DefaultSelectClause, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::WhereClause<Grouped<In<users::columns::id, Subselect<SelectStatement<posts::table, diesel::query_builder::select_clause::SelectClause<posts::columns::id>, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::WhereClause<Grouped<diesel::expression::operators::Eq<comments::columns::id, diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>>>>>, diesel::sql_types::Integer>>>>>`
   = note: required because of the requirements on the impl of `LoadQuery<_, (i32,)>` for `SelectStatement<users::table, diesel::query_builder::select_clause::DefaultSelectClause, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::WhereClause<Grouped<In<users::columns::id, Subselect<SelectStatement<posts::table, diesel::query_builder::select_clause::SelectClause<posts::columns::id>, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::WhereClause<Grouped<diesel::expression::operators::Eq<comments::columns::id, diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>>>>>, diesel::sql_types::Integer>>>>>`

error[E0271]: type mismatch resolving `<diesel::query_source::joins::Join<posts::table, users::table, Inner> as AppearsInFromClause<comments::table>>::Count == diesel::query_source::Once`
  --> $DIR/subselect_cannot_reference_random_tables.rs:38:10
   |
38 |         .load::<(i32,)>(&mut conn);
   |          ^^^^ expected struct `diesel::query_source::Never`, found struct `diesel::query_source::Once`
   |
   = note: required because of the requirements on the impl of `AppearsOnTable<diesel::query_source::joins::Join<posts::table, users::table, Inner>>` for `comments::columns::id`
   = note: 2 redundant requirements hidden
   = note: required because of the requirements on the impl of `AppearsOnTable<diesel::query_source::joins::Join<posts::table, users::table, Inner>>` for `Grouped<diesel::expression::operators::Eq<comments::columns::id, diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>>>`
   = note: required because of the requirements on the impl of `diesel::query_builder::where_clause::ValidWhereClause<diesel::query_source::joins::Join<posts::table, users::table, Inner>>` for `diesel::query_builder::where_clause::WhereClause<Grouped<diesel::expression::operators::Eq<comments::columns::id, diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>>>>`
   = note: required because of the requirements on the impl of `ValidSubselect<users::table>` for `SelectStatement<posts::table, diesel::query_builder::select_clause::SelectClause<posts::columns::id>, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::WhereClause<Grouped<diesel::expression::operators::Eq<comments::columns::id, diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>>>>>`
   = note: 5 redundant requirements hidden
   = note: required because of the requirements on the impl of `diesel::query_builder::where_clause::ValidWhereClause<users::table>` for `diesel::query_builder::where_clause::WhereClause<Grouped<diesel::expression::operators::Eq<users::columns::id, diesel::pg::expression::array_comparison::Any<Subselect<SelectStatement<posts::table, diesel::query_builder::select_clause::SelectClause<posts::columns::id>, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::WhereClause<Grouped<diesel::expression::operators::Eq<comments::columns::id, diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>>>>>, Array<diesel::sql_types::Integer>>>>>>`
   = note: required because of the requirements on the impl of `Query` for `SelectStatement<users::table, diesel::query_builder::select_clause::DefaultSelectClause, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::WhereClause<Grouped<diesel::expression::operators::Eq<users::columns::id, diesel::pg::expression::array_comparison::Any<Subselect<SelectStatement<posts::table, diesel::query_builder::select_clause::SelectClause<posts::columns::id>, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::WhereClause<Grouped<diesel::expression::operators::Eq<comments::columns::id, diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>>>>>, Array<diesel::sql_types::Integer>>>>>>>`
   = note: required because of the requirements on the impl of `LoadQuery<_, (i32,)>` for `SelectStatement<users::table, diesel::query_builder::select_clause::DefaultSelectClause, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::WhereClause<Grouped<diesel::expression::operators::Eq<users::columns::id, diesel::pg::expression::array_comparison::Any<Subselect<SelectStatement<posts::table, diesel::query_builder::select_clause::SelectClause<posts::columns::id>, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::WhereClause<Grouped<diesel::expression::operators::Eq<comments::columns::id, diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>>>>>, Array<diesel::sql_types::Integer>>>>>>>`

error[E0271]: type mismatch resolving `<diesel::query_source::joins::Join<posts::table, users::table, Inner> as AppearsInFromClause<comments::table>>::Count == diesel::query_source::Once`
  --> $DIR/subselect_cannot_reference_random_tables.rs:42:10
   |
42 |         .load::<(i32,)>(&mut conn);
   |          ^^^^ expected struct `diesel::query_source::Never`, found struct `diesel::query_source::Once`
   |
   = note: required because of the requirements on the impl of `AppearsOnTable<diesel::query_source::joins::Join<posts::table, users::table, Inner>>` for `comments::columns::id`
   = note: 2 redundant requirements hidden
   = note: required because of the requirements on the impl of `AppearsOnTable<diesel::query_source::joins::Join<posts::table, users::table, Inner>>` for `Grouped<diesel::expression::operators::Eq<comments::columns::id, diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>>>`
   = note: required because of the requirements on the impl of `diesel::query_builder::where_clause::ValidWhereClause<diesel::query_source::joins::Join<posts::table, users::table, Inner>>` for `diesel::query_builder::where_clause::WhereClause<Grouped<diesel::expression::operators::Eq<comments::columns::id, diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>>>>`
   = note: required because of the requirements on the impl of `ValidSubselect<users::table>` for `SelectStatement<posts::table, diesel::query_builder::select_clause::DefaultSelectClause, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::WhereClause<Grouped<diesel::expression::operators::Eq<comments::columns::id, diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>>>>>`
   = note: 3 redundant requirements hidden
   = note: required because of the requirements on the impl of `diesel::query_builder::where_clause::ValidWhereClause<users::table>` for `diesel::query_builder::where_clause::WhereClause<Exists<SelectStatement<posts::table, diesel::query_builder::select_clause::DefaultSelectClause, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::WhereClause<Grouped<diesel::expression::operators::Eq<comments::columns::id, diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>>>>>>>`
   = note: required because of the requirements on the impl of `Query` for `SelectStatement<users::table, diesel::query_builder::select_clause::DefaultSelectClause, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::WhereClause<Exists<SelectStatement<posts::table, diesel::query_builder::select_clause::DefaultSelectClause, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::WhereClause<Grouped<diesel::expression::operators::Eq<comments::columns::id, diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>>>>>>>>`
   = note: required because of the requirements on the impl of `LoadQuery<_, (i32,)>` for `SelectStatement<users::table, diesel::query_builder::select_clause::DefaultSelectClause, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::WhereClause<Exists<SelectStatement<posts::table, diesel::query_builder::select_clause::DefaultSelectClause, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::WhereClause<Grouped<diesel::expression::operators::Eq<comments::columns::id, diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>>>>>>>>`
